# cmake

./: readme.md
0_hello_cmake/: CMakeLists.txt  hello_cmake.cpp  readme.md
1_add_lib/src/: add.cpp
1_lib/: CMakeLists.txt  main.cpp
1_math_lib/: CMakeLists.txt  readme.md
1_math_lib/src/: CMakeLists.txt  sub.cpp
2_install/: CMakeLists.txt  readme.md
2_install/doc/: doc.md
2_install/src/: CMakeLists.txt  hello.cpp  main.cpp
3_curl_module/: CMakeLists.txt  readme.md
3_curl_module/src/: CMakeLists.txt  main.cpp
4_mymodule/: CMakeLists.txt  readme.md
4_mymodule/cmake/: FindHELLO.cmake
4_mymodule/src/: CMakeLists.txt  main.cpp
